--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,38 @@
-html,
-body {
+/* Header Height: 50px */
+
+html, body {   /* The html and body elements cannot have any padding or margin. */
   height: 100%;
-  /* The html and body elements cannot have any padding or margin. */
 }
 
-/* Wrapper for page content to push down footer */
-#wrap {
+#wrap { /* Wrapper for page content to push down footer */
   min-height: 100%;
   height: auto;
-  /* Negative indent footer by its height */
-  margin: 0 auto -60px;
-  /* Pad bottom by footer height */
-  padding: 0 0 60px;
-}
-
-/* Set the fixed height of the footer here */
-#footer {
-  height: 60px;
-  background-color: #f5f5f5;
 }
 
 #wrap > .container {
-  padding: 60px 15px 0;
-}
-.container .credit {
-  margin: 20px 0;
-}
-
-#footer > .container {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 60px 15px 20px;
 }
 
 code {
   font-size: 80%;
+}
+
+.carousel {
+    height: auto;
+}
+
+.carousel .item {
+  top: 50px; /* Accounts for header */
+  height: 100%;
+}
+.carousel-inner > .item > .inner-item > img {
+  margin: 0 auto;
+}
+
+.inner-item {
+    text-align: center;
+}
+
+.carousel-caption {
+  z-index: 10;
 }
