--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ html, body {   /* The html and body elements cannot have any padding or margin. 
 #wrap { /* Wrapper for page content to push down footer */
   min-height: 100%;
   height: auto;
+  padding-bottom: 27px; /* also in bottom.php*/
+}
+#footer{
+    text-align: center;
+    margin-top: -27px;
 }
 
 #wrap > .container {
